objects/PMC_DH_Store_Language__mdt.object
<CustomObject>
    <description>Metadata to store the store languages.</description>
    <fields>
        <fullName>Language_Prefix__c</fullName>
        <label>Language Prefix</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_PicklistOrder__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_UrlPrefix__c</fullName>
        <label>Url Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Locale__c</fullName>
        <label>User Locale</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Store Language</label>
    <pluralLabel>Store Languages</pluralLabel>
</CustomObject>